@startuml

class Dino {
    - dino_walk
    - dino_index
    - dino_surface
    - dino_jump
    - dino_duck
    - dino_duck_index
    - jump_sound
    - gravity
    - ducking
    + dino_input()
    + apply_gravity()
    + animation_state()
    + update()
}

class Obstacle {
    - type
    - y
    - moving
    + update()
    + destroy()
}

class MovingObstacle {
    - animation_index
    - frames
    + animation_state()
    + update()
}

class Bird {
    - bird_count
    + description()
    + __str__()
}

class Cactus1 {
    - __private_attribute
    - _protected_attribute
}

class Cloud {
    + cloud_movement()
    + destroy()
    + update()
}

Dino --> Obstacle
Dino --> MovingObstacle
Obstacle <|-- Bird
Obstacle <|-- Cactus1
Obstacle <|-- Cactus2
Obstacle <|-- Cactus3
Obstacle <|-- Cactus4
Obstacle <|-- Cactus5
Obstacle <|-- Cactus6

@enduml
